added ingredient-details, fixed interfaces

--- a/src/components/burger-ingredients/ingredient-item/ingredient-item.module.css
+++ b/src/components/burger-ingredients/ingredient-item/ingredient-item.module.css
@@ -8,6 +8,10 @@
   text-align: center;
 }
 
+.ingredient__item:hover {
+  cursor: pointer;
+}
+
 .ingredient__price {
   display: flex;
   gap: 8px;
