--- a/src/components/burger-constructor/constructor-empty-element/constructor-empty-element.module.css
+++ b/src/components/burger-constructor/constructor-empty-element/constructor-empty-element.module.css
@@ -4,6 +4,6 @@
   justify-content: center;
 
   width: 100%;
-  height: 80px;
+  min-height: 80px;
   background-color: var(--interface-modal-bg);
 }
