--- a/src/components/burger-constructor/constructor-elements/constructor-elements.module.css
+++ b/src/components/burger-constructor/constructor-elements/constructor-elements.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 16px;
   align-items: end;
-  padding: 0 16px;
+  padding: 2px 16px;
   max-height: 656px;
   overflow-y: auto;
   margin-bottom: 40px;
