--- a/src/components/modal/ingredient-details/ingredient-details.module.css
+++ b/src/components/modal/ingredient-details/ingredient-details.module.css
@@ -15,3 +15,9 @@
   composes: text text_type_main-medium mb-8 from global;
   text-align: center;
 }
+
+.details__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
