--- a/src/components/modal/feed-order-details/feed-order-details.module.css
+++ b/src/components/modal/feed-order-details/feed-order-details.module.css
@@ -65,3 +65,23 @@
   align-items: center;
   gap: 8px;
 }
+
+.img__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  border: 2px solid var(--accent);
+  overflow: hidden;
+  background-color: var(--interface-modal-bg);
+}
+
+.img__wrapper img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
