--- a/src/pages/account/profile.module.css
+++ b/src/pages/account/profile.module.css
@@ -2,7 +2,8 @@
   display: flex;
   gap: 60px;
   max-width: 1280px;
-  margin: 120px auto 0;
+  /* margin: 120px auto 0; */
+  margin: 40px auto 0;
   padding: 0 20px;
   box-sizing: border-box;
 }
